Unit test hearing action service